# madr

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.db  docker-compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 1afb051e7b3a_create_users_table.py  cccdd905eabf_create_book_table.py  d23448cba817_include_books_relationship_in_novelist.py  d56b5b99cf1d_create_novelist_table.py
src/app/: application.py
src/app/controllers/accounts/: __init__.py  change_accounts.py  create_accounts.py  create_accounts_refresh_token.py  create_accounts_token.py  delete_accounts.py
src/app/controllers/books/: __init__.py  create_books.py  delete_books.py  list_books.py  retrieve_books.py  update_books.py
src/app/controllers/novelists/: __init__.py  create_novelists.py  delete_novelists.py  list_novelists.py  retrieve_novelists.py  update_novelists.py
src/app/controllers/utils/: __init__.py  current_user.py  password.py  token.py
src/app/models/: books.py  novelists.py  users.py
src/app/schemas/requests/: accounts.py  books.py  novelists.py
src/app/schemas/responses/: accounts.py  books.py  novelists.py
src/app/views/v1/: accounts.py  books.py  novelists.py
src/config/app/: application.py
src/config/database/: base.py  dependency.py  session.py
tests/: conftest.py
tests/app/controllers/accounts/: test_change_accounts.py  test_create_accounts.py  test_create_accounts_refresh_token.py  (+2 more)
tests/app/models/: test_books.py  test_novelists.py  test_users.py
tests/config/database/: test_dependency.py
(+20 files in other folders)
